<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jae.ilovenugget.Achievement">

    <ImageButton
        android:id="@+id/menu4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size"/>

    <TextView
        android:id="@+id/achieve1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/_0_lifetime_nuggets"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/achieve2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/achieve1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/_0_calories_earned"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic"/>

    <TextView
        android:id="@+id/achieve3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/achieve2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/_0_365_days"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic"/>

    <TextView
        android:id="@+id/achieve4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/achieve3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/_0_spent"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic"/>
</RelativeLayout>
